	  CPPFLAGS during configure process.
	- if libev is installed on the base system (not libevent), detect
	  it from the event.h header file and link with -lev.
	- configlexer.lex gets config.h, and configyyrename.h added by make,
	  no more double include.
	- More strict scrubber (Thanks to George Barwood for the idea):
	  NS set must be pertinent to the query (qname subdomain nsname).

23 April 2010: Wouter
	- Squelch log message: sendto failed permission denied for
	  255.255.255.255, it is visible in VERB_DETAIL (verbosity 2).
	- Fix to fetch data as last resort more tenaciously.  When cycle
	  targets cause the server selection to believe there are more options
	  when they really are not there, the server selection is reinitiated.
	- Fix fetch from blacklisted dnssec lame servers as last resort.  The
	  server's IP address is then given in validator errors as well.
	- Fix local-zone type redirect that did not use the query name for
	  the answer rrset.

22 April 2010: Wouter
	- tag 1.4.4.
	- trunk contains 1.4.5 in development.
	- Fix validation failure for qtype ANY caused by a RRSIG parse failure.
	  The validator error message was 'no signatures from ...'.

16 April 2010: Wouter
	- more portability defines for CMSG_SPACE, CMSG_ALIGN, CMSG_LEN.
	- tag 1.4.4rc1.

15 April 2010: Wouter
	- ECC-GOST algorithm number 12 that is assigned by IANA.  New test
	  example key and signatures for GOST.  GOST requires openssl-1.0.0.
	  GOST is still disabled by default.

9 April 2010: Wouter
	- Fix bug#305: pkt_dname_tolower could read beyond end of buffer or
	  get into an endless loop, if 0x20 was enabled, and buffers are small
	  or particular broken packets are received.
	- Fix chain of trust with CNAME at an intermediate step, for the DS
	  processing proof.

8 April 2010: Wouter
	- Fix validation of queries with wildcard names (*.example).

6 April 2010: Wouter
	- Fix EDNS probe for .de DNSSEC testbed failure, where the infra